--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -130,6 +130,7 @@
 <!ENTITY Ctr_backforward	"Přesunutelná tlačítka zpět-vpřed">
 <!ENTITY Ctr_nbcompact		"Redukovat výšku navigační lišty">
 <!ENTITY Ctr_hide_bf_popup	"Skrýt nabídku historie tlačítek při kliknutí myší">
+<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
 <!ENTITY Ctr_bf_space		"Zmenšit mezery mezi tlačítky (pokud lze)">
 <!ENTITY Ctr_noconicons		"Nahradit ikony v kontextové nabídce stránky textem (zpět, vpřed, zastavit, obnovit, přidat do záložek)">
 <!ENTITY Ctr_prefpage		"Stránka nastavení">
