--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -130,6 +130,7 @@
 <!ENTITY Ctr_backforward	"Flytbare tilbage/frem-knapper">
 <!ENTITY Ctr_nbcompact		"Reducér navigationslinjernes højde">
 <!ENTITY Ctr_hide_bf_popup	"Skjul knappernes historik pop-op-menu når der trykkes på musen">
+<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
 <!ENTITY Ctr_bf_space		"Reducér mellemrum mellem knapperne (hvis det er muligt)">
 <!ENTITY Ctr_noconicons		"Side-genvejsmenu: erstat ikoner med mærkater (tilbage, fremad...)">
 <!ENTITY Ctr_prefpage		"Indstillinger-side/vindue">
