--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -130,6 +130,7 @@
 <!ENTITY Ctr_backforward	"Verschiebbare Zurück-Vor-Schaltfläche">
 <!ENTITY Ctr_nbcompact		"Höhe der Navigations-Symbolleiste reduzieren">
 <!ENTITY Ctr_hide_bf_popup	"Chronik-Aufklappmenü bei gedrückter Maustaste verstecken">
+<!ENTITY Ctr_hide_bf_pitem	"Getrennte Chronik-Aufklappmenüs für Zurück- und Vor-Schaltflächen">
 <!ENTITY Ctr_bf_space		"Zwischenraum reduzieren (falls möglich)">
 <!ENTITY Ctr_noconicons		"Seitenkontextmenü: Symbole durch Namen ersetzen (Zurück, Vor …)">
 <!ENTITY Ctr_prefpage		"Einstellungsseite / -fenster">
