--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -130,6 +130,7 @@
 <!ENTITY Ctr_backforward	"Pulsanti Indietro/Avanti mobili">
 <!ENTITY Ctr_nbcompact		"Riduci l’altezza delle barre di navigazione">
 <!ENTITY Ctr_hide_bf_popup	"Nascondi la cronologia dei pulsanti Avanti/Indietro">
+<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
 <!ENTITY Ctr_bf_space		"Riduci lo spazio tra i pulsanti (se possibile)">
 <!ENTITY Ctr_noconicons		"Sostituisci le icone del menu contestuale con etichette (indietro, avanti...)">
 <!ENTITY Ctr_prefpage		"Pagina Opzioni">
