--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -80,7 +80,7 @@
 <!ENTITY Ctr_closetab_3		"ツールバーの後ろに表示">
 <!ENTITY Ctr_closetab_4		"ツールバーの先頭に表示">
 <!ENTITY Ctr_closetab_5		"全てのタブ (強制)">
-<!ENTITY Ctr_closetab_6		"On hovered tab only">
+<!ENTITY Ctr_closetab_6		"カーソル下のタブのみ表示">
 <!ENTITY Ctr_closetab_hfot	"タブがひとつの時はボタンを隠す">
 <!ENTITY Ctr_closei_def		"デフォルトボタン">
 <!ENTITY Ctr_closeonleft	"タブタイトルの前に表示">
@@ -130,6 +130,7 @@
 <!ENTITY Ctr_backforward	"戻る-進むボタンを移動可能にする">
 <!ENTITY Ctr_nbcompact		"ナビゲーションツールバーの高さを下げる">
 <!ENTITY Ctr_hide_bf_popup	"マウスを押す時に履歴メニューを隠す">
+<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
 <!ENTITY Ctr_bf_space		"ボタン間のスペースを減らす (可能であれば)">
 <!ENTITY Ctr_noconicons		"ページの右クリックメニュー：アイコン(戻る、進む、停止、ブックマーク)をメニュー項目で置換する">
 <!ENTITY Ctr_prefpage		"オプションページ・ウィンドウ">
@@ -438,7 +439,7 @@
 <!ENTITY Ctr_menu_restart.label			"リスタート">
 <!ENTITY Ctr_restartapp					"&brandShortName; メニューとファイルメニューにリスタートを追加する">
 <!ENTITY Ctr_restartapp2				"パネルメニューにリスタートを表示する">
-<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
+<!ENTITY Ctr_contextfind				"'このページを検索...'と'次を検索'をツールバーの右クリックメニューに表示する">
 <!ENTITY Ctr_ctrnewinv					"現在のバージョンの &brandShortName; 用の新しいオプションに下線を引く">
 <!ENTITY Ctr_cssoverride				"カスタムCSSコード">
 <!ENTITY Ctr_cssoverride2				"CSSコードのエラーは検証されません！">
