--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -130,6 +130,7 @@
 <!ENTITY Ctr_backforward	"Μετακινήσιμα κουμπιά πίσω-εμπρός">
 <!ENTITY Ctr_nbcompact		"Μείωση ύψους εργαλειοθήκης πλοήγησης">
 <!ENTITY Ctr_hide_bf_popup	"Απόκρυψη αναδυόμενου μενού ιστορικού κουμπιών κατά το πάτημά τους">
+<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
 <!ENTITY Ctr_bf_space		"Μείωση διαστήματος μεταξύ των κουμπιών (εάν είναι δυνατόν)">
 <!ENTITY Ctr_noconicons		"Μενού περιεχομένου σελίδας: αντικατάσταση εικονιδίων με ετικέτες («Πίσω», «Μπροστά», «Διακοπή», «Ανανέωση», «Η σελίδα ως σελιδοδείκτης»)">
 <!ENTITY Ctr_prefpage		"Σελίδα / παράθυρο επιλογών">
