--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -130,6 +130,7 @@
 <!ENTITY Ctr_backforward	"Botones Anterior-Siguiente móviles">
 <!ENTITY Ctr_nbcompact		"Reducir altura de las barras de navegación">
 <!ENTITY Ctr_hide_bf_popup	"Ocultar menú del historial de estos botones al pulsarlos con el ratón">
+<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
 <!ENTITY Ctr_bf_space		"Reducir espacio entre estos botones (si es posible)">
 <!ENTITY Ctr_noconicons		"Menú contextual de la página: Reemplazar iconos con etiquetas (Anterior, Siguiente...)">
 <!ENTITY Ctr_prefpage		"Página/Ventana de opciones">
