--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -130,6 +130,7 @@
 <!ENTITY Ctr_backforward	"Liigutatavad tagasi-edasi nupud">
 <!ENTITY Ctr_nbcompact		"Vähenda asukohariba kõrgust">
 <!ENTITY Ctr_hide_bf_popup	"Hiirega klõpsates peida nupu ajaloo hüpikmenüü">
+<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
 <!ENTITY Ctr_bf_space		"Vähenda nuppudevahelist tühimikku (kui võimalik)">
 <!ENTITY Ctr_noconicons		"Lehe kontekstimenüü: asenda ikoonid tekstiga (tagasi, edasi...)">
 <!ENTITY Ctr_prefpage		"Sätete leht / aken">
