--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -130,6 +130,7 @@
 <!ENTITY Ctr_backforward	"Rendre mobiles les boutons « Reculer/Avancer »">
 <!ENTITY Ctr_nbcompact		"Réduire la hauteur de la barre de navigation">
 <!ENTITY Ctr_hide_bf_popup	"Masquer le menu surgissant de l'historique lors du clic droit">
+<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
 <!ENTITY Ctr_bf_space		"Réduire l'espace entre les boutons (si possible)">
 <!ENTITY Ctr_noconicons		"Menu contextuel de page : remplacer les icônes par du texte (Reculer, Avancer...)">
 <!ENTITY Ctr_prefpage		"Page des options">
