--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -130,6 +130,7 @@
 <!ENTITY Ctr_backforward	"Botão móvel voltar-avançar">
 <!ENTITY Ctr_nbcompact		"Reduzir a altura das barras de ferramentas de navegação">
 <!ENTITY Ctr_hide_bf_popup	"Ocultar o menu histórico ao pressionar o mouse">
+<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
 <!ENTITY Ctr_bf_space		"Reduzir o espaço entre os botões (se possível)">
 <!ENTITY Ctr_noconicons		"Substituir os ícones do menu de contexto da página por rótulos (voltar, avançar, parar, recarregar, página de favoritos)">
 <!ENTITY Ctr_prefpage		"Página de opções">
