--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -448,6 +448,10 @@
 <!ENTITY Ctr_openInNewTab				"Eingabe in neuem Tab öffnen">
 <!ENTITY Ctr_openInNewWindow			"Eingabe in neuem Fenster öffnen">
 
+<!-- Old search default browser labels -->
+<!ENTITY Ctr_engineManager_label		"Suchmaschinen verwalten...">
+<!ENTITY Ctr_searchEndCap_label			"Suchen">
+
 <!-- Seitenkontextmenüschlüssel: individuell für jede Lokalisierung -->
 <!ENTITY backCmd.accesskey				"Z">
 <!ENTITY forwardCmd.accesskey			"V">
