--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -448,6 +448,10 @@
 <!ENTITY Ctr_openInNewTab				"Abrir entradas en una nueva pestaña">
 <!ENTITY Ctr_openInNewWindow			"Abrir entradas en una nueva ventana">
 
+<!-- Old search default browser labels -->
+<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
+<!ENTITY Ctr_searchEndCap_label			"Search">
+
 <!-- For page context entries. Have to be adjusted for every locale! a-s-r-p-m -->
 <!ENTITY backCmd.accesskey				"n">
 <!ENTITY forwardCmd.accesskey			"g">
