--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -448,6 +448,10 @@
 <!ENTITY Ctr_openInNewTab				"Ava sisestused uuel kaardil">
 <!ENTITY Ctr_openInNewWindow			"Ava sisestused uues aknas">
 
+<!-- Old search default browser labels -->
+<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
+<!ENTITY Ctr_searchEndCap_label			"Search">
+
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"T">
 <!ENTITY forwardCmd.accesskey			"E">
