--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -448,6 +448,10 @@
 <!ENTITY Ctr_openInNewTab				"Zapodaća w nowym rajtarku wočinić">
 <!ENTITY Ctr_openInNewWindow			"Zapodaća w nowym woknje wočinić">
 
+<!-- Old search default browser labels -->
+<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
+<!ENTITY Ctr_searchEndCap_label			"Search">
+
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"W">
 <!ENTITY forwardCmd.accesskey			"D">
