--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -448,6 +448,10 @@
 <!ENTITY Ctr_openInNewTab				"Abrir entradas em uma nova aba">
 <!ENTITY Ctr_openInNewWindow			"Abrir entradas em uma nova janela">
 
+<!-- Old search default browser labels -->
+<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
+<!ENTITY Ctr_searchEndCap_label			"Search">
+
 <!-- For page context entries. have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"V">
 <!ENTITY forwardCmd.accesskey			"A">
