--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -448,6 +448,10 @@
 <!ENTITY Ctr_openInNewTab				"Odpri vnose v novem zavihku">
 <!ENTITY Ctr_openInNewWindow			"Odpri vnose v novem oknu">
 
+<!-- Old search default browser labels -->
+<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
+<!ENTITY Ctr_searchEndCap_label			"Search">
+
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"N">
 <!ENTITY forwardCmd.accesskey			"p">
