--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -448,6 +448,10 @@
 <!ENTITY Ctr_openInNewTab				"在新分頁開啟輸入結果">
 <!ENTITY Ctr_openInNewWindow			"在新視窗開啟輸入結果">
 
+<!-- Old search default browser labels -->
+<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
+<!ENTITY Ctr_searchEndCap_label			"Search">
+
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"B">
 <!ENTITY forwardCmd.accesskey			"F">
