--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -448,6 +448,10 @@
 <!ENTITY Ctr_openInNewTab				"Åbn inputs i et nyt faneblad">
 <!ENTITY Ctr_openInNewWindow			"Åbn inputs i et nyt vindue">
 
+<!-- Old search default browser labels -->
+<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
+<!ENTITY Ctr_searchEndCap_label			"Search">
+
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"T">
 <!ENTITY forwardCmd.accesskey			"F">
