--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -448,6 +448,10 @@
 <!ENTITY Ctr_openInNewTab				"Άνοιγμα καταχωρίσεων σε νέα καρτέλα">
 <!ENTITY Ctr_openInNewWindow			"Άνοιγμα καταχωρίσεων σε νέο παράθυρο">
 
+<!-- Old search default browser labels -->
+<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
+<!ENTITY Ctr_searchEndCap_label			"Search">
+
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"Π">
 <!ENTITY forwardCmd.accesskey			"Μ">
