--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -448,6 +448,10 @@
 <!ENTITY Ctr_openInNewTab				"Apri l'indirizzo in una nuova scheda">
 <!ENTITY Ctr_openInNewWindow			"Apri l'indirizzo in una nuova finestra">
 
+<!-- Old search default browser labels -->
+<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
+<!ENTITY Ctr_searchEndCap_label			"Search">
+
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey            "I">
 <!ENTITY forwardCmd.accesskey         "A">
