--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -448,6 +448,10 @@
 <!ENTITY Ctr_openInNewTab				"入力後に新しいタブで開く">
 <!ENTITY Ctr_openInNewWindow			"入力後に新しいウィンドウで開く">
 
+<!-- Old search default browser labels -->
+<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
+<!ENTITY Ctr_searchEndCap_label			"Search">
+
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"B">
 <!ENTITY forwardCmd.accesskey			"F">
