--- a/xpi/locale/nl/options.dtd
+++ b/xpi/locale/nl/options.dtd
@@ -448,6 +448,10 @@
 <!ENTITY Ctr_openInNewTab				"Invoerwaarden openen in een nieuw tabblad">
 <!ENTITY Ctr_openInNewWindow			"Invoerwaarden openen in een nieuw venster">
 
+<!-- Old search default browser labels -->
+<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
+<!ENTITY Ctr_searchEndCap_label			"Search">
+
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"T">
 <!ENTITY forwardCmd.accesskey			"V">
