--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -448,6 +448,10 @@
 <!ENTITY Ctr_openInNewTab				"Відкрити вхідні дані в новій вкладці">
 <!ENTITY Ctr_openInNewWindow			"Відкрити вхідні дані у новому вікні">
 
+<!-- Old search default browser labels -->
+<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
+<!ENTITY Ctr_searchEndCap_label			"Search">
+
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"Н">
 <!ENTITY forwardCmd.accesskey			"В">
