Update pt-BR translation

--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -130,7 +130,7 @@
 <!ENTITY Ctr_backforward	"Botão móvel voltar-avançar">
 <!ENTITY Ctr_nbcompact		"Reduzir a altura das barras de ferramentas de navegação">
 <!ENTITY Ctr_hide_bf_popup	"Ocultar o menu histórico ao pressionar o mouse">
-<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
+<!ENTITY Ctr_hide_bf_pitem	"Popups separados do histórico para botões de avançar e voltar">
 <!ENTITY Ctr_bf_space		"Reduzir o espaço entre os botões (se possível)">
 <!ENTITY Ctr_noconicons		"Substituir os ícones do menu de contexto da página por rótulos (voltar, avançar, parar, recarregar, página de favoritos)">
 <!ENTITY Ctr_prefpage		"Página de opções">
@@ -449,8 +449,8 @@
 <!ENTITY Ctr_openInNewWindow			"Abrir entradas em uma nova janela">
 
 <!-- Old search default browser labels -->
-<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
-<!ENTITY Ctr_searchEndCap_label			"Search">
+<!ENTITY Ctr_engineManager_label		"Organizar Mecanismos de Pesquisa...">
+<!ENTITY Ctr_searchEndCap_label			"Pesquisar">
 
 <!-- For page context entries. have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"V">
