--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -130,7 +130,7 @@
 <!ENTITY Ctr_backforward	"Pśesuwajobny tłocašk Slědk-Doprědka">
 <!ENTITY Ctr_nbcompact		"Wusokosć nawigaciskich rědkow reducěrowaś">
 <!ENTITY Ctr_hide_bf_popup	"Meni historije pśez tłocenje myškoweje tasty schowaś">
-<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
+<!ENTITY Ctr_hide_bf_pitem	"Źělone wuskokojuce wokna historije za tłocaška slěd a doprědka">
 <!ENTITY Ctr_bf_space		"Rum mjazy tłocaškami reducěrowaś (jolic móžno)">
 <!ENTITY Ctr_noconicons		"Symbole kontekstowego menija boka pśez pomjenjenja wuměniś (slědk, dalej, stoj, znowego, bok ako cytańske znamje składowaś)">
 <!ENTITY Ctr_prefpage		"Bok/Wokno nastajenjow">
@@ -449,8 +449,8 @@
 <!ENTITY Ctr_openInNewWindow			"Zapódaśa w nowem woknje wócyniś">
 
 <!-- Old search default browser labels -->
-<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
-<!ENTITY Ctr_searchEndCap_label			"Search">
+<!ENTITY Ctr_engineManager_label		"Pytnice zastojaś...">
+<!ENTITY Ctr_searchEndCap_label			"Pytaś">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"S">
