--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -130,7 +130,7 @@
 <!ENTITY Ctr_backforward	"Μετακινήσιμα κουμπιά πίσω-εμπρός">
 <!ENTITY Ctr_nbcompact		"Μείωση ύψους εργαλειοθήκης πλοήγησης">
 <!ENTITY Ctr_hide_bf_popup	"Απόκρυψη αναδυόμενου μενού ιστορικού κουμπιών κατά το πάτημά τους">
-<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
+<!ENTITY Ctr_hide_bf_pitem	"Διαχωρισμένα αναδυόμενα ιστορικού κουμπιών πίσω και εμπρός">
 <!ENTITY Ctr_bf_space		"Μείωση διαστήματος μεταξύ των κουμπιών (εάν είναι δυνατόν)">
 <!ENTITY Ctr_noconicons		"Μενού περιεχομένου σελίδας: αντικατάσταση εικονιδίων με ετικέτες («Πίσω», «Μπροστά», «Διακοπή», «Ανανέωση», «Η σελίδα ως σελιδοδείκτης»)">
 <!ENTITY Ctr_prefpage		"Σελίδα / παράθυρο επιλογών">
@@ -449,8 +449,8 @@
 <!ENTITY Ctr_openInNewWindow			"Άνοιγμα καταχωρίσεων σε νέο παράθυρο">
 
 <!-- Old search default browser labels -->
-<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
-<!ENTITY Ctr_searchEndCap_label			"Search">
+<!ENTITY Ctr_engineManager_label		"Διαχείριση μηχανών αναζήτησης…">
+<!ENTITY Ctr_searchEndCap_label			"Αναζήτηση">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"Π">
