--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -439,7 +439,7 @@
 <!ENTITY Ctr_menu_restart.label			"Restart">
 <!ENTITY Ctr_restartapp					"Show 'Restart' in &brandShortName; menu and File menu">
 <!ENTITY Ctr_restartapp2				"Show 'Restart' in panel menu">
-<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
+<!ENTITY Ctr_contextfind				"Show 'Find in This Page...' and 'Find Again' in toolbars context menu">
 <!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
 <!ENTITY Ctr_cssoverride				"Custom css code">
 <!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
