--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -130,7 +130,7 @@
 <!ENTITY Ctr_backforward	"Přesuwajomne tłóčatko Wróćo-Doprědka">
 <!ENTITY Ctr_nbcompact		"Wysokosć nawigaciskich lajstow redukować">
 <!ENTITY Ctr_hide_bf_popup	"Meni historije přez tłóčenje tasty myše schować">
-<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
+<!ENTITY Ctr_hide_bf_pitem	"Dźělene wuskakowace wokna historije za tłóčatce wróćo a doprědka">
 <!ENTITY Ctr_bf_space		"Rum mjez tłóčatkami redukować (jeli móžno)">
 <!ENTITY Ctr_noconicons		"Symbole kontekstoweho menija strony přez pomjenowanja wuměnić (wróćo, dale, stój, znowa, stronu jako zapołožku składować)">
 <!ENTITY Ctr_prefpage		"Strona/wokno nastajenjow">
@@ -449,8 +449,8 @@
 <!ENTITY Ctr_openInNewWindow			"Zapodaća w nowym woknje wočinić">
 
 <!-- Old search default browser labels -->
-<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
-<!ENTITY Ctr_searchEndCap_label			"Search">
+<!ENTITY Ctr_engineManager_label		"Pytawy rjadować...">
+<!ENTITY Ctr_searchEndCap_label			"Pytać">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"W">
