--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -130,7 +130,7 @@
 <!ENTITY Ctr_backforward	"Rendre mobiles les boutons « Reculer/Avancer »">
 <!ENTITY Ctr_nbcompact		"Réduire la hauteur de la barre de navigation">
 <!ENTITY Ctr_hide_bf_popup	"Masquer le menu surgissant de l'historique lors du clic droit">
-<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
+<!ENTITY Ctr_hide_bf_pitem	"Scinder le menu surgissant de l'historique en deux">
 <!ENTITY Ctr_bf_space		"Réduire l'espace entre les boutons (si possible)">
 <!ENTITY Ctr_noconicons		"Menu contextuel de page : remplacer les icônes par du texte (Reculer, Avancer...)">
 <!ENTITY Ctr_prefpage		"Page des options">
@@ -275,9 +275,9 @@
 <!ENTITY Ctr_starinurlinfo	"Cela masque le bouton de menu des marque-pages.">
 <!ENTITY Ctr_feedinurl		"Afficher le bouton d'abonnement aux flux">
 <!ENTITY Ctr_hideurelstop	"Masquer les boutons « Arrêter/Actualiser »">
-<!ENTITY Ctr_hideurelstop2	"Toujours afficher le bouton « Se rendre à la page indiquée (...) »">
+<!ENTITY Ctr_hideurelstop2	"Toujours afficher le bouton « Se rendre à la page indiquée »">
 <!ENTITY Ctr_hideurlgo		"Masquer le bouton « Se rendre à la page indiquée dans la barre d'adresse »">
-<!ENTITY Ctr_hideurlsrg		"Masquer les séparateurs et espaces pour « Arrêter/Actualiser/Se rendre (...) »">
+<!ENTITY Ctr_hideurlsrg		"Masquer les séparateurs et espaces pour « Arrêter/Actualiser/Se rendre »">
 <!ENTITY Ctr_urlbardropm	"Déplacer la liste déroulante à la dernière position possible">
 <!ENTITY Ctr_urlbardropm2	"Rendre le bouton de liste déroulante toujours visible">
 <!ENTITY Ctr_altreaderico	"Utiliser des icônes alternatives pour le « mode lecture »">
@@ -299,7 +299,7 @@
 <!ENTITY Ctr_padlock_cla	"Classique">
 <!ENTITY Ctr_padlock_mod	"Moderne">
 <!ENTITY Ctr_padlock_ext	"Afficher l'icône « &brandShortName; » pour les pages « about: » valides">
-<!ENTITY Ctr_icopageinfo	"Ouvrir la fenêtre « Informations (...) » en cliquant sur le Favicon/globe/icône « i »">
+<!ENTITY Ctr_icopageinfo	"Ouvrir la fenêtre « Informations » en cliquant sur le Favicon/globe/icône « i »">
 <!ENTITY Ctr_lbsbsize		"Personnaliser la largeur">
 <!ENTITY Ctr_searchbar		"Barre de recherche">
 <!ENTITY Ctr_autocomplete	"Fenêtre surgissante d'autocomplétion">
@@ -449,14 +449,14 @@
 <!ENTITY Ctr_openInNewWindow			"Ouvrir les entrées dans une nouvelle fenêtre">
 
 <!-- Old search default browser labels -->
-<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
-<!ENTITY Ctr_searchEndCap_label			"Search">
+<!ENTITY Ctr_engineManager_label		"Gérer les moteurs de recherche...">
+<!ENTITY Ctr_searchEndCap_label			"Rechercher">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
-<!ENTITY backCmd.accesskey				"d">
-<!ENTITY forwardCmd.accesskey			"a">
-<!ENTITY reloadCmd.accesskey			"c">
-<!ENTITY stopCmd.accesskey				"r">
+<!ENTITY backCmd.accesskey				"R">
+<!ENTITY forwardCmd.accesskey			"A">
+<!ENTITY reloadCmd.accesskey			"P">
+<!ENTITY stopCmd.accesskey				"C">
 <!ENTITY bookmarkPageCmd2.accesskey		"M">
 
 <!-- Fallback entities. Do not change! -->
