--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -449,8 +449,8 @@
 <!ENTITY Ctr_openInNewWindow			"Otwórz dane wejściowe w nowym oknie">
 
 <!-- Old search default browser labels -->
-<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
-<!ENTITY Ctr_searchEndCap_label			"Search">
+<!ENTITY Ctr_engineManager_label		"Zarządzaj wyszukiwarkami...">
+<!ENTITY Ctr_searchEndCap_label			"Szukaj">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"W">
