Updated Slovenian translation

--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -449,8 +449,8 @@
 <!ENTITY Ctr_openInNewWindow			"Odpri vnose v novem oknu">
 
 <!-- Old search default browser labels -->
-<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
-<!ENTITY Ctr_searchEndCap_label			"Search">
+<!ENTITY Ctr_engineManager_label		"Upravljaj z iskalniki …">
+<!ENTITY Ctr_searchEndCap_label			"Išči">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"N">
