--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -130,7 +130,7 @@
 <!ENTITY Ctr_backforward	"Botones Anterior-Siguiente móviles">
 <!ENTITY Ctr_nbcompact		"Reducir altura de las barras de navegación">
 <!ENTITY Ctr_hide_bf_popup	"Ocultar menú del historial de estos botones al pulsarlos con el ratón">
-<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
+<!ENTITY Ctr_hide_bf_pitem	"Menús emergentes de historial separados para botones Anterior, Siguiente">
 <!ENTITY Ctr_bf_space		"Reducir espacio entre estos botones (si es posible)">
 <!ENTITY Ctr_noconicons		"Menú contextual de la página: Reemplazar iconos con etiquetas (Anterior, Siguiente...)">
 <!ENTITY Ctr_prefpage		"Página/Ventana de opciones">
@@ -449,8 +449,8 @@
 <!ENTITY Ctr_openInNewWindow			"Abrir entradas en una nueva ventana">
 
 <!-- Old search default browser labels -->
-<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
-<!ENTITY Ctr_searchEndCap_label			"Search">
+<!ENTITY Ctr_engineManager_label		"Administrar motores de búsqueda...">
+<!ENTITY Ctr_searchEndCap_label			"Buscar">
 
 <!-- For page context entries. Have to be adjusted for every locale! a-s-r-p-m -->
 <!ENTITY backCmd.accesskey				"n">
