--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -130,7 +130,7 @@
 <!ENTITY Ctr_backforward	"戻る-進むボタンを移動可能にする">
 <!ENTITY Ctr_nbcompact		"ナビゲーションツールバーの高さを下げる">
 <!ENTITY Ctr_hide_bf_popup	"マウスを押す時に履歴メニューを隠す">
-<!ENTITY Ctr_hide_bf_pitem	"Separated history popups for back and forward buttons">
+<!ENTITY Ctr_hide_bf_pitem	"「戻る 進む」ボタンの履歴ポップアップを分離する">
 <!ENTITY Ctr_bf_space		"ボタン間のスペースを減らす (可能であれば)">
 <!ENTITY Ctr_noconicons		"ページの右クリックメニュー：アイコン(戻る、進む、停止、ブックマーク)をメニュー項目で置換する">
 <!ENTITY Ctr_prefpage		"オプションページ・ウィンドウ">
@@ -449,8 +449,8 @@
 <!ENTITY Ctr_openInNewWindow			"入力後に新しいウィンドウで開く">
 
 <!-- Old search default browser labels -->
-<!ENTITY Ctr_engineManager_label		"Manage Search Engines...">
-<!ENTITY Ctr_searchEndCap_label			"Search">
+<!ENTITY Ctr_engineManager_label		"検索エンジンを管理...">
+<!ENTITY Ctr_searchEndCap_label			"検索">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"B">
